--- a/layout.html
+++ b/layout.html
@@ -57,7 +57,7 @@
 
             <div>
                 <div>
-                    <img src="jogodavelha.png" id="openJogo" alt="Jogo da Velha">
+                    <img src="icons/jogodavelha.png" id="openJogo" alt="Jogo da Velha">
 
                     <!-- 
                     The Modal
@@ -69,7 +69,7 @@
                         </div>
                     
                     </div> --> 
-                    <img src="toDoList.jpg" class="toDoList" alt="ToDo List">
+                    <img src="icons/toDoList.jpg" class="toDoList" alt="ToDo List">
                 </div>
             </div>
 
