--- a/layout.html
+++ b/layout.html
@@ -39,7 +39,7 @@
             <h2>About</h2>
 
             <div>
-                <img class="fotoana" src="fotositeana.png" alt="minhafoto"></div> 
+                <img class="fotoana" src="img/fotositeana.png" alt="minhafoto"></div> 
 
                 <div class="conteudo-about">
                     <h3>Quem sou EU</h3>
